--- a/src/my-announcements.html
+++ b/src/my-announcements.html
@@ -59,7 +59,9 @@
         <p class="sm mb-3">Продам Много дорогой арматуры А3 12 мм А 500С Нд срочно</p>
         <div class="d-flex justify-content-between">
             <p class="sm grey">Статус: <span class="green"><strong>Открыта</strong></span></p>
-            <a href="#delete-announcement" class="link sm js-delete-announcement">Закрыть объявление</a>
+            <a href="javascript:void(0)" class="link sm" data-toggle="modal" data-target="#delete-modal">
+                Закрыть объявление
+            </a>
         </div>
     </div>
 
@@ -146,12 +148,19 @@
     </div>
 </div>
 
-<div id="delete-announcement" class="announcement-modal mfp-hide">
-    <h4 class="mb-12">Удалить объявление</h4>
-    <p class="mb-32">Вы действительно хотите удалить объявление?</p>
-    <div class="d-flex justify-content-end">
-        <a href="" class="btn btn-grey sm js-close-btn"><strong>Отмена</strong></a>
-        <a href="" class="btn btn-primary sm ml-3">Удалить</a>
+<div id="delete-modal" class="modal fade base-modal delete-modal modal-bottom" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4>Удалить заявку</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <p class="mb-32">Вы действительно хотите удалить объявление?</p>
+            <div class="justify-content-end d-flex">
+                <a href="" class="btn btn-grey sm" data-dismiss="modal" aria-label="Close"><strong>Отмена</strong></a>
+                <a href="" class="btn btn-primary sm ml-3">Удалить</a>
+            </div>
+        </div>
     </div>
 </div>
 </body>
