--- a/src/my-proposals.html
+++ b/src/my-proposals.html
@@ -270,16 +270,18 @@
 </div>
 
 <div id="delete-modal" class="modal fade base-modal delete-modal modal-bottom" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h4>Удалить заявку</h4>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-            <p class="mb-32">Вы действительно хотите удалить заявку?</p>
-            <div class="justify-content-end d-flex">
-                <a href="" class="btn btn-grey sm" data-dismiss="modal" aria-label="Close"><strong>Отмена</strong></a>
-                <a href="" class="btn btn-primary sm ml-3">Удалить</a>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h4>Удалить заявку</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p class="mb-32">Вы действительно хотите удалить объявление?</p>
+                <div class="justify-content-end d-flex">
+                    <a href="" class="btn btn-grey sm" data-dismiss="modal" aria-label="Close"><strong>Отмена</strong></a>
+                    <a href="" class="btn btn-primary sm ml-3">Удалить</a>
+                </div>
             </div>
         </div>
     </div>
